notifier email (symfony mailer)

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,6 +1,4 @@
-label:
-    title: Titre
-    content: Contenu
-placeholder:
-    title: Entrer le titre de votre article
-    content: ...
+label.title: Titre
+label.content: Contenu
+placeholder.title: 'Entrer le titre de votre article'
+placeholder.content: ...
